attempted to fix input shadows on ios

--- a/public_html/assets/css/confirmation.css
+++ b/public_html/assets/css/confirmation.css
@@ -19,6 +19,12 @@ html, body {
   width: 100%;
 }
 
+input[type=text], textarea {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
 body {
   color: #2D2D2D;
   display: flex;
