--- a/resources/css/globals/_reset.scss
+++ b/resources/css/globals/_reset.scss
@@ -8,3 +8,9 @@ html, body {
     height: 100%;
     width: 100%;
 }
+
+input[type=text], textarea {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+}
